<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.hp15p077tx.courses.UI.AboutFragment"
    android:paddingLeft="8dp"
    android:weightSum="1">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Introduction:"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/set_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This app will provide students with an oppurtunity to learn different courses from one single platform with no additional hassels or charges."
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Terms and Conditions:"
        android:layout_marginTop="8dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="24sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="This app has been provided for free for the benefit of students. However the content is under copyright. Any form of plagiarism will be prosecuted."
        android:textSize="20sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Created By:"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="24sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/chit"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/az"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ash"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/ferdi"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
        android:textSize="24sp" />

</LinearLayout>
